--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
   box-shadow: inset 0 0 20px rgb(242, 15, 238), 0 0 25px rgba(227, 43, 255, 0.8);
   font-size: 25px;
   letter-spacing: 5px;
-  color: white;
+  color: whitesmoke;
   cursor: pointer;
 }
 
