--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
   background-color: rgb(17, 1, 23);
 }
 
@@ -19,7 +23,7 @@ body {
 .heading {
   text-align: center;
   color: whitesmoke;
-  margin: 60px 0;
+  margin: 20px 0;
   font-size: 45px;
   font-weight: bold;
   filter: drop-shadow(0 0 15px rgba(126, 8, 210, 0.8));
