--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   
 }
 body {
-  background-color: rgb(17, 1, 23);
+  background-color: rgb(0, 0, 0);
 }
 
 .home {
@@ -27,7 +27,7 @@ body {
   margin: 20px 0;
   font-size: 45px;
   font-weight: bold;
-  filter: drop-shadow(0 0 15px rgba(126, 8, 210, 0.8));
+  filter: drop-shadow(0 0 15px rgba(250, 249, 251, 0.8));
 }
 
 .navbar {
@@ -52,15 +52,14 @@ body {
 
 .nav-items a {
   display: inline-block;
-  background-image: linear-gradient(rgb(196, 35, 240), rgb(146, 14, 169), rgb(75, 10, 86), rgb(39, 4, 45) );
   padding: 30px 50px;
   width: 285px;
-  border: 2px solid pink;
+  border: 2px solid rgb(255, 0, 43);
   border-radius: 50px;
-  box-shadow: inset 0 0 20px rgb(242, 15, 238), 0 0 25px rgba(227, 43, 255, 0.8);
+  box-shadow: inset 0 0 20px rgb(225, 120, 120), 0 0 25px rgba(240, 88, 88, 0.8);
   font-size: 25px;
   letter-spacing: 5px;
-  color: whitesmoke;
+  color: white;
   cursor: pointer;
 }
 
